--- a/prosess/analyse.tex
+++ b/prosess/analyse.tex
@@ -6,27 +6,35 @@
 
 \section{Kompetanse i praksis}
 
-Samtlige gruppemedlemmer følger sivilingeniørstudiet på NTNU, og har som en
-konsekvens av det den samme faglige ``grunnpakken''. Dette har gjort det enklere
-for gruppemedlemmene og kommunisere på tvers av fagfeltene, da alle behersker
-basisterminologi innen f.eks. fysikk, matematikk, statistikk og programmering. Utover
-dette har gruppemedlemmenes kompetanse fått praktisk utfoldelse gjennom det vi
-godt kan kalle naturlig oppgavefordeling. Knut Halvor, med bakgrunn fra
-datateknikk, har hatt hovedansvar for programmering. Fysikeren på gruppa,
-Åsmund, har taklet differensialligningenes praktiske anvendelse, mens gapet
-mellom programimplementasjon og fysisk problem har blitt fylt (les:
-diskretisert) av Turid og Paul, matematikerene på gruppa. Joakim, som har
-spesialisering innenfor konstruksjonsteknikk, har bidratt litt over det hele, da
-han har generell kunnskap innen de samme fagfeltene. Gjennom tilbakemelding på
+I startfasen brukte vi mye tid på formulere en problemstilling der alle 
+medlemmene skulle få annvendt sin fagbakgrunn. Det var tidlig stresset av fasilitatorene
+viktigheten i at hele gruppa følte eierskap til prosjektet (referer til eit eller anna).
+Dette følte vi var best gjort ved å skape en positiv avhengighet mellom gruppemedlemmene,
+ved å velge ein problemstilling som bygde på alles fagbakgrunn. (her spesielt MAC-modellen).
+Slik har gruppemedlemmenes kompetanse fått praktisk utfoldelse gjennom det vi
+kan kalle naturlig oppgavefordeling. Knut Halvor, med bakgrunn fra
+datateknikk, har hatt hovedansvar for programmering.
+Fysikeren på gruppa, Åsmund, har taklet differensialligningenes praktiske anvendelse, mens gapet
+mellom programimplementasjon og fysisk problem har blitt fylt (les:diskretisert) av Turid og Paul,
+matematikerene på gruppa. Joakim, som har spesialisering innenfor konstruksjonsteknikk, har bidratt litt over det hele, da
+han har generell kunnskap innen de samme fagfeltene. Som praktikeren på gruppa var han i tillegg godt anvendt 
+som ansvarhavende ved det eksperimentelle forsøkene. (dårlig overgang) Gjennom tilbakemelding på
 gruppelogger viste det seg også at Joakim var flink til å skrive prosess, slik
-at han fikk tildelt en del ansvar med tanke på prosessrapport. 
+at han fikk tildelt en del ansvar med tanke på prosessrapport.
 
-Det har i så måte vært meget tilfredstillende å se at teoretisk kunnskap kan
+Da medlemmene var positivt avhengige av kvarandre var det viktig at me klarte å
+kommuniserer informasjon effektivt videre til de andre medlemmene (referer til noko).
+Da samtlige gruppemedlemmer følger sivilingeniørstudiet på NTNU, besitter me den samme
+faglige ``grunnpakken''. Dette har gjort det enklere for gruppemedlemmene å kommunisere på 
+tvers av fagfeltene, da alle behersker basisterminologi innen f.eks. fysikk, matematikk, 
+statistikk og programmering. Dette har i praksis ført til at vi har hatt et effektivt
+og givende samarbeid. Det er også kjekt å se måten de tre fagfelta overlapper hverrandre og
+utfyller hverandre. Ved å bygge på de andre medlemmenes kunnskaper, når me lengre sammen som 
+en gruppe enn vi ville gjort som individ/ på eigenhand.
+Det har i så måte vært meget tilfredstillende å se at at teoretisk kunnskap kan
 benyttes til å beskrive praktiske fysiske fenomener, og at overenstemmelsen
 mellom numerisk simulering og eksperiment er god. 
 
-\emph{Jeg fant dette kapittelet tungt å skrive om, vi må ha mer her.. Plenum
-plz?!}
 
 %Føler denne kan inn her - Åsmund
 Som et eksempel på kompetanse i praksis presenterer vi en grafisk fremstilling
