--- a/prosess/main.tex
+++ b/prosess/main.tex
@@ -13,7 +13,11 @@
 	\pagenumbering{roman} 	%Sidetall på formen i, ii, osv. på sammendrag, forord og innholdsfortegnelse.
 
 	\sammendrag{Tekst som skal stå i sammendrag}
-	\forord{Tekst som skal stå i forord}
+	\forord{Arbeidet ble utført i forbindelse med emnet TMA4850 Eksperter i
+Team - Matematikk innen anvendelser ved NTNU, Trondheim. Gruppearbeidet foregikk
+over ett semester med gruppemøter hovedsaklig en dag i uka. Vi ønsker å takke
+læringsassistentene Ida-Rene Jacobsen Forsberg og Sana Ahsan Khan for god hjelp
+(og fasilitering) i forbindelse med prosessdelen av faget.}
 	
 	\clearpage		%Ny side
 
