--- a/prosess/analyse.tex
+++ b/prosess/analyse.tex
@@ -18,7 +18,7 @@ Fysikeren på gruppa, Åsmund, har taklet differensialligningenes praktiske anve
 mellom programimplementasjon og fysisk problem har blitt fylt (les:diskretisert) av Turid og Paul,
 matematikerene på gruppa. Joakim, som har spesialisering innenfor konstruksjonsteknikk, har bidratt litt over det hele, da
 han har generell kunnskap innen de samme fagfeltene. Som praktikeren på gruppa var han i tillegg godt anvendt 
-som ansvarhavende ved det eksperimentelle forsøkene. (dårlig overgang) Gjennom tilbakemelding på
+som ansvarhavende ved det eksperimentelle forsøkene. Gjennom tilbakemelding på
 gruppelogger viste det seg også at Joakim var flink til å skrive prosess, slik
 at han fikk tildelt en del ansvar med tanke på prosessrapport.
 
