--- a/prosess/konklusjon.tex
+++ b/prosess/konklusjon.tex
@@ -1,1 +1,28 @@
 \chapter{Konklusjon}
+Allerede på de første landsbydagene la vi merke til at vi hadde hatt flaks med
+gruppesammensetningen. Alle gruppas medlemmer var innstilte på å gjøre en god
+jobb, og vi merket fort at stemningen i gruppa var god. På starten var vi
+noe negativt innstilt til jobbing med prosess. Vi så ikke på forhånd nytten
+av å dedikere spesifikk tid til å arbeide med teambygging, og mente at teambygging
+ville skje naturlig dersom vi bare fikk jobbe med prosjektet. \\
+
+Etterhvert som vi fikk jobbet noen ganger med prosjekt og med prosess så vi at
+prosessarbeidet har en klar nytteverdi. Øvelsene har i seg selv vært ganske
+gode, selv om det har vært litt murring, hovedsaklig fordi det har avbrutt oss
+mens vi var godt igang med prosjektarbeidet. Det at vi har arbeidet med prosess
+samt å tilegne oss teori har ført til at grupperegler har ligget i bakhodet når
+situasjoner har oppstått, slik at vi har tatt teorien i bruk i praksis, f.eks.
+når vi .\\
+
+Vi har også merket at vår tilegnelse av teorien har gjort det enklere å håndtere
+situasjoner som har med gruppestruktur og gruppedynamikk å gjøre. Når man kan henvise
+til en bestemt teori som underbygger argumenter for å omstrukturere er det
+enklere å bli enige om et felles ståsted.\\
+
+Den største endringen i gruppedynamikken så vi under framføringen i midten av
+semesteret. Medlemmene fikk inntrykk av at de andre på gruppa var oppmerksomme
+når man snakket, og at man fikk god støtte hvis man ble utrygg. Dette gjorde at
+flere av medlemmene følte seg trygge nok til å improvisere med eksempler rundt
+gruppas framgang. \\
+
+
