--- a/prosess/main.tex
+++ b/prosess/main.tex
@@ -19,7 +19,9 @@
 
 %Innholdsfortegnelse (automagisk)
 	\setcounter{tocdepth}{1}
+	\addtolength{\parskip}{-\baselineskip}
 	\tableofcontents
+	%\addtolength{\parskip}{\baselineskip}
 	\clearpage		%Blank side
 	\thispagestyle{empty}	%Uten sidetall
 
