--- a/prosess/oppstart-utvikling.tex
+++ b/prosess/oppstart-utvikling.tex
@@ -330,7 +330,12 @@ at han skårer noe høyere på ``tilbakeholden i teamet''.
 
 Når vi ser tilbake kan det påstås at gruppa gjennomgikk de fire trinnene i
 Tuckmans \cite{tuckman} teori om gruppeutvikling, \emph{forming, storming,
-norming} og \emph{performing}, selv om tildels har hoppet helt over
+norming} og \emph{performing}, kort oppsummert sier Tuckman at gruppen først vil
+formes, en fase som kjennetegnes ved bred enighet og lite konflikt. Deretter
+følger motstandsfasen (storming) hvor det stormer rundt medlemmene, det er
+konflikter og problemer. Disse løses i norming-fasen, og gruppa blir enig om
+hvordan konflikter og problemer skal løses. Gruppa blir da i stand til å
+prestere i performing-fasen. Vi har lagt merke at gruppa tildels har hoppet helt over
 \emph{storming}-fasen. Dette har sin årsak i at vi er rimelig like i måten å
 håndtere konflikter og at vi ikke kverulerer unødvendig, men er heller
 løsningsorienterte og har fokus på fremdrift. At Tuckmans modell ikke passer
