--- a/prosess.sty
+++ b/prosess.sty
@@ -43,7 +43,7 @@ Schoonderbeek Solberg, Paul Vo}}\\
 #1
 \begin{flushright}
 Åsmund Ervik, Joakim Johnsen, Paul Vo,\\ Knut Halvor Skrede, Turid Schoonderbeek Solberg
-\\ \textit{ \today}
+\\ \textit{Trondheim, \today}
 \end{flushright}
 }
 
