--- a/prosess/innledning.tex
+++ b/prosess/innledning.tex
@@ -1,3 +1,17 @@
 \chapter{Innledning}
 \section*{Innledning}
-Her skal innledningen stå. Pass på å sitere \cite{schwarz}.
+Denne rapporten er skrevet i sammenheng med faget TMA4850 Eksperter i Team våren
+2011 av gruppa Fu\th ark. Rapporten har som mål å vise utviklingen til gruppa
+og gruppas dynamikk gjennom prosjektet, og å bevisstgjøre medlemmene på
+prosessene som har funnet sted langs veien.
+
+Rapporten er delt inn i seks kapitler. \emph{Innledningen} leser du nå.
+\emph{Presentasjon av gruppens medlemmer} tar nettopp for seg å presentere
+gruppens medlemmer, deres faglige bakgrunn, erfaring med gruppearbeid og hvordan
+resten av gruppa ser på medlemmet. \emph{Teori} tar for seg de forskjellige
+teoretiske modellene for gruppearbeid og gruppedynamikk, og setter dem inn i en
+relevant kontekst. Videre beskrives \emph{Oppstart og utvikling} i arbeidet med
+prosjektet og prosessen, og til slutt drøftes \emph{Analyse av gruppearbeidet}
+der vi peker på sammenhenger mellom teori og praksis i vår gruppe, ser på
+gruppas bruk av regler og teori, og ser på hvordan dette stemmer med
+virkeligheten. Det siste kapittelet presenterer vår \emph{Konklusjon}.
