--- a/prosess/appendixa.tex
+++ b/prosess/appendixa.tex
@@ -2,7 +2,7 @@
 \chapter{Gruppekontrakten}
 \label{avs:kontrakt}
 \pagestyle{empty}
-\begin{figure}[!h]
+\begin{figure}[p]
     \includegraphics[width=\textwidth]{EiTkontrakt-p1.pdf}
 \end{figure}
 \begin{figure}[p]
