--- a/prosess/innledning.tex
+++ b/prosess/innledning.tex
@@ -1,4 +1,5 @@
 \chapter{Innledning}
+\fancyhead{}
 \section*{Innledning}
 Denne rapporten er skrevet i sammenheng med faget TMA4850 Eksperter i Team våren
 2011 av gruppa Fu\th ark. Rapporten har som mål å vise utviklingen til gruppa
