--- a/prosess/medlemmer.tex
+++ b/prosess/medlemmer.tex
@@ -1,4 +1,9 @@
 \chapter{Presentasjon av gruppens medlemmer}
+%Siden vi bruker \person, må vi hacke om fancyhdr litt
+\fancyhead[LE]{\thepage\hspace{2em}\footnotesize{\leftmark}}
+\fancyhead[RE,LO]{}
+\fancyhead[RO]{{\footnotesize\leftmark}\hspace{2em}\thepage}
+
 \person{Åsmund}
 Åsmund går i 4.klasse på studieretningen Teknisk Fysikk, med fordypning 
 i matematisk fysikk. Åsmund har jobbet med numerikk og fysikk på sin forrige 
