--- a/prosess/teori.tex
+++ b/prosess/teori.tex
@@ -1,4 +1,9 @@
 \chapter{Teori}
+%Gjenoppretter stilen som ble tweaket i forrige avsnitt
+\fancyhead[LE]{\thepage\hspace{2em}\footnotesize{\rightmark}}
+\fancyhead[RE,LO]{\thesection}
+\fancyhead[RO]{{\footnotesize\leftmark}\hspace{2em}\thepage}
+
 \section{Schwarz - gruppeteori}
 \label{sec:schwarz}
 \subsection{Effektivitet}
