--- a/rapport.sty
+++ b/rapport.sty
@@ -27,7 +27,7 @@ showtabs=false
 {\Large group 5 - FU\TH ARK - \textarn{futhark} - \wb}\par
 \vfill
 \wb\\[\drop]
-{\Large \textsc{Åsmund Ervik, Joakim Johnsen, Knut Halvor Skrede,\\ Turid
+{\Large \textsc{Åsmund Ervik, Joakim Johnsen, Knut Halvor Skrede, Turid
 Schoonderbeek Solberg, Paul Vo}}\\
 \vspace*{\drop}
 {\scshape 2011}\par
