--- a/prosess/main.tex
+++ b/prosess/main.tex
@@ -9,55 +9,29 @@
 	\clearpage		%Ny side
 	
 %Sammendrag og forord:
-	\pagestyle{plain}	%Stil på sammendrag og forord.
-	\pagenumbering{roman} 	%Sidetall på formen i, ii, osv. på sammendrag, forord og innholdsfortegnelse.
+	\forordstil		%Fikser stilen på sammendrag og forord
 
 	\sammendrag{Denne rapporten tar for seg prosessen gruppa har vært
 	igjennom i TMA4850 Eksperter i Team. Fra å være fem fremmede ved
 	oppstart, har gruppa gjennom arbeid og øvelser blitt en sammensveist
 	gjeng som arbeider godt sammen. Rapporten beskriver i detalj
-	gruppemedlemmen, de forskjellige faser og prosesser som gruppa har vært gjennom, 
+	gruppemedlemmene, de forskjellige faser og prosesser som gruppa har vært gjennom, 
 	og forsøker å sette disse inn i en gruppeteoretisk kontekst. Videre blir
 	gruppas utvikling analysert og drøftet for å få en bedre forståelse av
 	hva som kjennetegner gruppa og gruppas samhandlingsmåter.}
 
 	\forord{Arbeidet ble utført i forbindelse med emnet TMA4850 Eksperter i
-Team - Matematikk innen anvendelser ved NTNU, Trondheim. Gruppearbeidet foregikk
-over ett semester med gruppemøter hovedsaklig en dag i uka. Vi ønsker å takke
-læringsassistentene Ida-Rene Jacobsen Forsberg og Sana Ahsan Khan for god hjelp
-(og fasilitering) i forbindelse med prosessdelen av faget. I tillegg vil vi
-rette en takk til Trond Kvamsdal for presentasjoner av alternativ prosessteori.
-\vspace{3cm}
-\makebox[\textwidth][l]{
-\makebox[4cm][l] {\hrulefill} \hfill 
-\makebox[4cm][l] {\hrulefill} }
-\makebox[\textwidth][l]{
-Joakim Johnsen \hfill Åsmund Ervik
-}
-
-\vspace{1cm}
-\makebox[\textwidth][l]{
-\makebox[4cm][l] {\hrulefill} \hfill 
-\makebox[4cm][l] {\hrulefill} }
-\makebox[\textwidth][l]{
-Paul Vo \hfill Turid Schoonderbeek Solberg
-}
-
-\vspace{1cm}
-\makebox[\textwidth][l]{
-\makebox[4cm][l] {\hrulefill}  }
-\makebox[\textwidth][l]{
-Knut Halvor Skrede}
-
-}
+	Team - Matematikk innen Anvendelser ved NTNU, Trondheim. Gruppearbeidet foregikk
+	over ett semester med gruppemøter hovedsaklig en dag i uka. Vi ønsker å takke
+	læringsassistentene Ida-Rene Jacobsen Forsberg og Sana Ahsan Khan for god hjelp
+	(og fasilitering) i forbindelse med prosessdelen av faget. I tillegg vil vi
+	rette en takk til Trond Kvamsdal for presentasjoner av alternativ prosessteori.}
 	
 	\clearpage		%Ny side
 
 %Innholdsfortegnelse (automagisk)
 	\setcounter{tocdepth}{1}
-	\addtolength{\parskip}{-\baselineskip}
 	\tableofcontents
-	%\addtolength{\parskip}{\baselineskip}
 	\clearpage		%Blank side
 	\thispagestyle{empty}	%Uten sidetall
 
@@ -71,6 +45,7 @@ Knut Halvor Skrede}
 	\include{analyse}    %tilsvarende den brune delen
 	\include{konklusjon}
 %Appendikser:
+	\fancyhead[RE,LO]{}	%Ingen headere i appendiks og bibliografi
 	\include{appendixa}
 	
 %Referanser
