Mekket småting, f.eks. geometry

--- a/prosess/main.tex
+++ b/prosess/main.tex
@@ -31,8 +31,10 @@
 
 %Innholdsfortegnelse (automagisk)
 	\setcounter{tocdepth}{1}
+	\newgeometry{inner=2cm,outer=4cm,top=2cm}
 	\tableofcontents
 	\clearpage		%Blank side
+	\restoregeometry
 	\thispagestyle{empty}	%Uten sidetall
 
 %Kapitler:
