--- a/poster/mia-mal.tex
+++ b/poster/mia-mal.tex
@@ -9,6 +9,7 @@
 \usepackage[english]{babel}
 \usepackage[latin1]{inputenc}
 \usepackage[orientation=portrait,size=a0,scale=1.7,debug]{beamerposter}
+\usepackage{textcomp}
 \usepackage{ragged2e}
 
 \setlength\parskip{1.5\baselineskip}
@@ -41,30 +42,42 @@
 	Numerical simulations and experiments with bacon preparation
 	in a microwave oven were performed. The numerical simulations were
 	performed using the Crank-Nicolson numerical scheme on various heat
-	equations for the different media in bacon. The experiments were
-	performed with regular and with thick bacon in an ordinary household
-	microwave oven, for single slices, and preparation times in the range
-	30-70 seconds. The results of the experiments are in good agreement both
-	with expected behaviour and with the results of the numerical work.
-
-
-\vspace{1.0\baselineskip}
-{\Large Result}
-
-In this project we discretized the heat equation using Crank- Nicholson. 
-We thus obtain the implicit method for the heat equation
+	equations for the different media in bacon. 
+\\
+The discetizaion scheme used was thus
+\\
 \begin{eqnarray*}
 u_m^{n+1}-\mu k(\frac{1}{h^2}\delta_x^2 u_m^{n+1}-\frac{1}{f^2}\delta_y^2 u_m^{n+1}-\frac{1}{g^2}\delta_z^2 u_m^{n+1}) \\
 =u_m^n + \mu k(\frac{1}{h^2}\delta_x^2 u_m^n + \frac{1}{f^2}\delta_y^2 u_m^n +\frac{1}{g^2}\delta_z^2 u_m^n)
 \label{crank}
 \end{eqnarray*}
+\\
 with truncation error of order
 \begin{eqnarray*}
 \frac{\tau_m^ n}{k} = \mathcal{O} (k^2 + h^2 + g^2 + f^2)
 \label{truncerror}
 \end{eqnarray*}
-
+\\
 The truncation error $\frac{\tau_m^n}{k} \Rightarrow 0$ as $h,f,g,k \Rightarrow 0$, and the Crank-Nicolson method is consistent for the heat equation. By performing a von Neumann analysis of the numerical scheme, one can show that the method are unconditional stable, thus the scheme converges.
+\\
+As boundary condition we used a constant temperature of 20 \textdegree C, which represent the roomtemperature. A source term, $J^{MW}$, was also added to the heat equation, to represent the microwave effect.
+\\
+\begin{eqnarray*}
+  J^{MW}(r) &=& 0.5 + 2.55008r - 0.588013r^2 + 0.032445r^3 \\
+    && + 0.00124411r^4 - 9.73516\cdot 10^{-4}r^5
+  \label{eq:effektfordeling}
+\end{eqnarray*}
+\\
+The experiments were
+	performed with regular and with thick bacon in an ordinary household
+	microwave oven, for single slices, and preparation times in the range
+	30-70 seconds. The results of the experiments are in good agreement both
+	with expected behaviour and with the results of the numerical work.
+	
+\vspace{1.0\baselineskip}
+{\Large Result}
+
+
 
 	Lorem ipsum dolor sit amet, consectetur adipisicing
 	elit, sed do eiusmod tempor incididunt ut labore et
